# eventsourcing-django

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: github-actions.yml
docker/: docker-compose-local.yml
eventsourcing_django/: __init__.py  admin.py  apps.py  factory.py  models.py  recorders.py
eventsourcing_django/management/commands/: reset_follower.py  sync_followers.py
eventsourcing_django/migrations/: 0001_initial.py
eventsourcingdjango/: apps.py  factory.py  models.py  recorders.py
eventsourcingdjango/migrations/: 0001_initial.py
tests/: manage.py  test_application.py  test_docs.py  test_factory.py  test_noninterleaving_notification_ids.py  test_recorders.py  test_reset_follower_command.py  test_sync_followers_command.py
tests/djangoproject/: asgi.py  manage.py  runner_utils.py  settings.py  settings_testdocs.py  urls.py  wsgi.py
tests/emails/: application.py  domain.py
tests/eventsourcing_runner_django/: apps.py
tests/extra_eventsourcing_runner/: apps.py
tests/training_school/: application.py  apps.py  domain.py
